[gd_scene load_steps=6 format=3 uid="uid://bygqxudqxi0q6"]

[ext_resource type="Script" uid="uid://bea2uj1o7avwp" path="res://scripts/vector_arrow.gd" id="1_847lv"]
[ext_resource type="Texture2D" uid="uid://g7k8nqvp528k" path="res://sprites/arrow_shaft.png" id="2_847lv"]
[ext_resource type="Texture2D" uid="uid://bnbh0wqk576kk" path="res://sprites/arrow_tip.png" id="3_384fh"]
[ext_resource type="Texture2D" uid="uid://c5wooacq87xpi" path="res://sprites/arrow_head.png" id="4_847lv"]

[sub_resource type="Gradient" id="Gradient_847lv"]
offsets = PackedFloat32Array(0, 0.34117648, 0.6647059, 1)
colors = PackedColorArray(0.27999997, 0.87999994, 1, 1, 0.049699992, 0.71, 0.26980007, 1, 0.826735, 0.91, 0.3549, 1, 1, 0.011764706, 0.015686275, 1)

[node name="VectorArrow" type="Node2D"]
script = ExtResource("1_847lv")
color_ramp = SubResource("Gradient_847lv")

[node name="Back" type="Sprite2D" parent="."]
modulate = Color(0.21249825, 0.83017236, 0.7859759, 1)
texture = ExtResource("3_384fh")

[node name="Shaft" type="Sprite2D" parent="."]
modulate = Color(0.21249825, 0.83017236, 0.7859759, 1)
position = Vector2(14, 0)
texture = ExtResource("2_847lv")

[node name="Tip" type="Sprite2D" parent="."]
modulate = Color(0.21249825, 0.83017236, 0.7859759, 1)
position = Vector2(33, 0)
texture = ExtResource("4_847lv")

[connection signal="offset_updated" from="." to="." method="_on_offset_updated"]
[connection signal="scale_updated" from="." to="." method="_on_scale_updated"]
